test/vectorCompr7.slq

def main() ⇒ [H(0) for i in 10]; /// error
